Add diagnostic investigation for vector kernel allocation failures; document findings and update measurement protocols